@@ -1,3 +1,8 @@
+2003-03-24  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-window-manage-views.c (nautilus_window_reload):
+	Scroll to current position on reload.
+
 2003-03-22  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Walloon (wa) to ALL_LINGUAS
